2020-06-03  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_fake.c, test/fakesmsc.c: add type 'utf8' to allow simple
      injection of UTF-8 encoded MOs.
      
2020-05-04 Alexander Malysh <amalysh @ kannel.org>
    * gwlib/http.[ch]: added http PATCH method support

2020-03-30  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr_redis.c: fix dlr_redis_update() to get correct DLR entry updates,
      i.e. for intermediate events.

2020-01-06 Alexander Malysh <amalysh @ kannel.org>
    * gw/smsc/smsc_smpp.c, doc/userguide.xml, gwlib/cfg.def: added new config
      option to retry even if SMSC rejects login due to wrong username & password.

2020-01-06 Alexander Malysh <amalysh @ kannel.org>
    * doc/userguide/userguide.xml, gw/urltrans.c: added %U escape code for
      hexcoded UDH.

2019-12-10  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: fixed last commit, wrong XML struct.
    Thanks to Alexander Malysh for pointing to this.
    
2019-12-07  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/http/generic.c: allow using the 'alt-charset' usage in the MT
      direction too, to transcode the payload before URL-encoding and 
      setting the corresponding charset="" value in the content-type header
      for HTTP POST methods.
      
2019-12-04  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document 'use-post' for generic type
      of HTTP SMSC.
    * gw/smsc_http_p.h: add use_post flag.
    * gw/smsc_http.c: use 'use-post' boolean config from 'group = smsc'.
    * gw/smsc/http/generic.c: implement HTTP POST method support for the
      sending and receiving side of the 'system-type = generic'.
    * gwlib/cfg.def: add 'use-post' config directive to 'group = smsc'.
    * gwlib/http.[ch]: export function parse_cgivars() publically.
    This patchset adds support for the HTTP POST method for the SMSC HTTP
    type 'generic'. Handling long Unicode messages can easily exceed the